--- a/index.html
+++ b/index.html
@@ -14,29 +14,54 @@
 	<script src="./assets/scripts.js"></script>
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
 	<meta name="description" content="Nina Carducci, photographe professionnelle à Bordeaux, spécialisée en portraits, mariages, concerts et photographie d’entreprise. Réservez votre séance dès aujourd’hui.">
+	<meta name="twitter:url" content="http://monsiteweb.fr/ninacarducci" />
+	<meta name="twitter:site" content="@ninacarducci" />
+	<meta name="instagram:site" content="@nincarducci" />
+	<meta name="instagram:url" content="http://monsiteweb.fr/ninacarducci"/>
+	<meta property="og:site_name" content="ninacarducci" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://monsiteweb.fr/ninacarducci" />
+	<meta property="og:title" content="Nina Carducci, photographe professionnelle à Bordeaux, spécialisée en portraits, mariages, concerts et photographie d’entreprise. Réservez votre séance dès aujourd’hui." />
+	<meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux, spécialisée en portraits, mariages, concerts et photographie d’entreprise. Réservez votre séance dès aujourd’hui." />
+	<meta property="og:image" content="https://monsiteweb/images/uneimage.jpg" />
 	<script type="application/ld+json">
-		{
-	"@context": "https://schema.org",
-	"@type": "Photographer",
-	"name": "Nina Carducci",
-	"image": "https://www.ninacarducci.com/assets/images/nina.webp",
-	"address": {
-		"@type": "PostalAddress",
-		"streetAddress": "68 avenue Alsace-Lorraine",
-		"addressLocality": "Bordeaux",
-		"postalCode": "33200",
-		"addressCountry": "FR"
-			},
-	"telephone": "+33 5 56 67 78 89",
-	"openingHours": "Mo-Fr 10:00-19:00",
-	"url": "https://www.ninacarducci.com",
-	"sameAs": [
-			  "https://www.instagram.com/ninacarducci.photo/?hl=fr"
-			],
-	"priceRange": "€€",
-	"description": "Nina Carducci est une photographe professionnelle basée à Bordeaux. Spécialisée en portraits, mariages, événements et photographie d'entreprise.",
-		  }
-		</script>
+        {
+            "@context": "https://schema.org/",
+            "@type": "ProfessionalService",
+            "name": "Nina Carducci",
+            "jobTitle": "Photographe",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Bordeaux",
+                "addressRegion": "Gironde",
+                "postalCode": "33200",
+                "streetAddress": "68 avenue Alsace-Lorraine"
+            },
+            "telephone": "05 56 67 78 89",
+            "url": "https://ninacarducci-oc.netlify.app/",
+            "contactPoint": {
+                "@type": "ContactPoint",
+                "telephone": "05 56 67 78 89",
+                "contactType": "customer service",
+                "areaServed": "FR",
+                "availableLanguage": "French",
+                "openingHoursSpecification": [
+                    {
+                        "@type": "OpeningHoursSpecification",
+                        "dayOfWeek": [
+                            "Monday",
+                            "Tuesday",
+                            "Wednesday",
+                            "Thursday",
+                            "Friday"
+                        ],
+                        "opens": "10:00",
+                        "closes": "19:00"
+                    }
+                ]
+            }
+        }
+    </script>
 </head>
 <body>
 	<header>
